--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
 
     <!-- Topbar Start -->
-    <div class="container-fluid bg-primary text-white d-none d-lg-flex">
+    <div class="container-fluid bg-red text-white d-none d-lg-flex">
             <div class="container py-3">
                 <div class="d-flex align-items-center">
                     <!-- <a href="index.html">
@@ -49,7 +49,7 @@
                             <p style="color: white; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">RAPID<span style="color: red; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>FRIDGE</strong></span><span style="color: black; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>REPAIRS</strong></span><br></p>
                     </a>-->
                     <div class="ms-auto d-flex align-items-center menu-link">
-                        <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>2 Kwartel Street Brackenfell Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
+                        <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>9 Rhodesia Street, WoodStock, Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
                         <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
                         <a href="" style="color: white"><small class="menu-link"><i class="fa fa-phone-alt me-3"></i>+27614027786</small></a>
                     </div>
@@ -111,7 +111,7 @@
                                     <div class="service-item position-relative h-100">
                                         <div class="service-text rounded p-5">
                                             <h5 class="mb-3">OUR OFFICE LOCATION</h5>
-                                            <h3 class="mb-0">2 Kwartel Street Brackenfell Cape Town</h3>
+                                            <h3 class="mb-0">9 Rhodesia Street, WoodStock, Cape Town</h3>
                                         </div>
                                     </div>
                                 </div>
@@ -183,70 +183,71 @@
         <div data-wow-delay="0.1s">
             <div>
                 <div >
-                    <iframe style="width: 1300px; height: 800px;"src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d211851.0512041598!2d18.39522387532424!3d-33.936686660364195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d-33.923755899999996!2d18.4394742!4m5!1s0x1dcc516adddda27b%3A0xb3b3178fb2ed9aef!2s2%20Kwartel%20St%2C%20Brackenfell%2C%20Cape%20Town%2C%207560!3m2!1d-33.8763127!2d18.6902434!5e0!3m2!1sen!2sza!4v1705544900517!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <!-- <iframe style="width: 1300px; height: 800px;"src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d211851.0512041598!2d18.39522387532424!3d-33.936686660364195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d-33.923755899999996!2d18.4394742!4m5!1s0x1dcc516adddda27b%3A0xb3b3178fb2ed9aef!2s2%20Kwartel%20St%2C%20Brackenfell%2C%20Cape%20Town%2C%207560!3m2!1d-33.8763127!2d18.6902434!5e0!3m2!1sen!2sza!4v1705544900517!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+                    <iframe style="width: 1300px; height: 800px;" src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d26484.500742128403!2d18.419573402120456!3d-33.92665553505636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d-33.923755899999996!2d18.4394742!4m5!1s0x1dcc5d9f7649cdcd%3A0x3c035e622203f125!2s9%20Rhodesia%20St%2C%20Woodstock%2C%20Cape%20Town%2C%207915!3m2!1d-33.9302184!2d18.450435499999998!5e0!3m2!1sen!2sza!4v1706032428019!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
         <!-- Google Map End -->
     </div>
 
-    <!-- Footer Start -->
+    !-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">RapidFridgeRepair</h4>
-                    <p>Fridge Repair is a trusted and reliable provider of professional appliance repair and re-gassing services.</p>
-                    <a href="tel:+27614027786" class="d-inline-flex align-items-center rounded overflow-hidden border border-primary bg-primary text-white" style="width: 250px; height: 55px;">
-                        <span class="btn-lg-square bg-primary" style="width: 55px; height: 55px;">
-                            <i class="fa fa-phone-alt text-white"></i>
-                        </span>
-                        Book An Appointment
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>2 Kwartel Street Brackenfell Cape Town</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+27614027786</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za</p>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="about.html">About Us</a>
-                    <a class="btn btn-link" href="contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="service.html">Our Services</a>
-                    <a class="btn btn-link" href="terms-condition.html">Terms & Condition</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Business Hours</h4>
-                    <p class="mb-1">Monday - Friday</p>
-                    <h6 class="text-light">09:00 am - 07:00 pm</h6>
-                    <p class="mb-1">Saturday</p>
-                    <h6 class="text-light">09:00 am - 12:00 pm</h6>
-                    <p class="mb-1">Sunday</p>
-                    <h6 class="text-light">Closed</h6>
+            <div class="container py-5">
+                <div class="row g-5">
+                    <div class="col-lg-3 col-md-6">
+                            <h4 style="color: blue; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">RAPID<span style="color: red; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>FRIDGE</strong></span><span style="color: white; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>REPAIRS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong></span><br></h4>
+                        <p>Fridge Repair is a trusted and reliable provider of professional appliance repair and re-gassing services.</p>
+                        <a href="tel:+27614027786" class="d-inline-flex align-items-center rounded overflow-hidden border border-primary bg-primary text-white" style="width: 250px; height: 55px;">
+                            <span class="btn-lg-square bg-primary" style="width: 55px; height: 55px;">
+                                <i class="fa fa-phone-alt text-white"></i>
+                            </span>
+                            Book An Appointment
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <h4 class="text-white mb-4">Our Office</h4>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>9 Rhodesia Street, WoodStock, Cape Town</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+27614027786</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za</p>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <h4 class="text-white mb-4">Quick Links</h4>
+                        <a class="btn btn-link" href="about.html">About Us</a>
+                        <a class="btn btn-link" href="contact.html">Contact Us</a>
+                        <a class="btn btn-link" href="service.html">Our Services</a>
+                        <!-- <a class="btn btn-link" href="terms-condition.html">Terms & Condition</a> -->
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <h4 class="text-white mb-4">Business Hours</h4>
+                        <p class="mb-1">Monday - Friday</p>
+                        <h6 class="text-light">Always Open 24/7</h6>
+                        <p class="mb-1">Saturday</p>
+                        <h6 class="text-light">Always Open 24/7</h6>
+                        <p class="mb-1">Sunday</p>
+                        <h6 class="text-light">Always Open 24/7</h6>
+                    </div>
                 </div>
             </div>
-        </div>
-        <p class="text-center">Follow us on:</p>
-        <hr>
-        <div class="d-flex justify-content-center align-items-center">
-            <div class="d-flex align-items-md-center">
-                <a class="btn btn-square btn-light rounded-circle social-icon" href=""><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-youtube"></i></a>
-                <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-linkedin-in"></i></a>
+            <p class="text-center">Follow us on:</p>
+            <hr>
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="d-flex align-items-md-center">
+                    <a class="btn btn-square btn-light rounded-circle social-icon" href=""><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-linkedin-in"></i></a>
+                </div>
             </div>
+            <!-- Whatsapp Start -->
+            <div class="d-flex justify-content-end">
+                <a  class="whats-app" href="https://wa.me/+27614027786 " target="_blank">
+                    <i class="fab fa-whatsapp" style="font-size:36px" data-toggle="tooltip" data-placement="top" title="Let's Chat"></i>
+                </a>
+            </div>
+            <!-- Whatsapp end -->
         </div>
-        <!-- Whatsapp Start -->
-        <div class="d-flex justify-content-end">
-            <a  class="whats-app" href="https://wa.me/+27614027786 " target="_blank">
-                <i class="fab fa-whatsapp" style="font-size:36px" data-toggle="tooltip" data-placement="top" title="Let's Chat"></i>
-            </a>
-        </div>
-        <!-- Whatsapp end -->
-    </div>
-    <!-- Footer End -->
+        <!-- Footer End -->
 
 
     <!-- Copyright Start -->
