--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <p style="color: white; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">RAPID<span style="color: red; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>FRIDGE</strong></span><span style="color: black; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>REPAIRS</strong></span><br></p>
                 </a>-->
                 <div class="ms-auto d-flex align-items-center menu-link">
-                    <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>2 Kwartel Street Brackenfell Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
+                    <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>9 Rhodesia Street, WoodStock, Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
                     <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
                     <a href="" style="color: white"><small class="menu-link"><i class="fa fa-phone-alt me-3"></i>+27614027786</small></a>
                 </div>
@@ -225,7 +225,7 @@
                         <p class="fs-5 fw-medium text-primary">About Us</p>
                         <h1 class="display-6 mb-4">The Best Fridge Repair and re-gassing in Cape Town</h1>
                         <p class="mb-4">Rapid Fridge Repair is a trusted and reliable provider of professional appliance repair and electrical services. With years of experience in the industry, we have established ourselves as a leading authority in fridge repair, serving residential and commercial clients throughout our Cape Town and Western Cape.</p>
-                        <div class="row g-5 pt-2 mb-5">
+                        <div class="row g-5 pt-2 mb-5 text-dark">
                             <div class="col-sm-6 about-item">
                                 <img class="img-fluid mb-4" src="img/rapid-about-01.png" alt="">
                                 <h5 class="mb-3">Domestic Fridge Repairs Specialist</h5>
@@ -477,7 +477,7 @@
         </div>
     </div>
     <!-- Testimonial End -->
-    <h3 class="text-center">Areas and Brands Serviced:</h3>
+    <h3 class="text-center">Areas and Brands We Offer Service:</h3>
     <div class="container-fluid">
         <p><strong>Brands Serviced: AEG | Bosch | Defy | LG | KIC | Gaggenau | Smeg | Speed Queen | Samsung | Russell Hobbs | Other Leading Brands
                 Areas serviced: Western Cape | Cape Town CBD | Northern Suburbs | Southern Suburbs | Bellville | Paarl | Brackenfell | Durbanville | Eerste River | Elsie’s River | Kuilsriver | Fish Hoek | Maitland | Mitchells Plain | Panorama | Parow | Table View | Claremont | Camps Bay | Clifton | Green Point | Hout Bay | Sea Point | Stellenbosch | And Surrounding Suburbs Near Me</strong></p>
@@ -489,7 +489,7 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">RapidFridgeRepair</h4>
+                        <h4 style="color: blue; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">RAPID<span style="color: red; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>FRIDGE</strong></span><span style="color: white; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>REPAIRS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong></span><br></h4>
                     <p>Fridge Repair is a trusted and reliable provider of professional appliance repair and re-gassing services.</p>
                     <a href="tel:+27614027786" class="d-inline-flex align-items-center rounded overflow-hidden border border-primary bg-primary text-white" style="width: 250px; height: 55px;">
                         <span class="btn-lg-square bg-primary" style="width: 55px; height: 55px;">
@@ -500,7 +500,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>2 Kwartel Street Brackenfell Cape Town</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>9 Rhodesia Street, WoodStock, Cape Town</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+27614027786</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za</p>
                 </div>
@@ -509,16 +509,16 @@
                     <a class="btn btn-link" href="about.html">About Us</a>
                     <a class="btn btn-link" href="contact.html">Contact Us</a>
                     <a class="btn btn-link" href="service.html">Our Services</a>
-                    <a class="btn btn-link" href="terms-condition.html">Terms & Condition</a>
+                    <!-- <a class="btn btn-link" href="terms-condition.html">Terms & Condition</a> -->
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Business Hours</h4>
                     <p class="mb-1">Monday - Friday</p>
-                    <h6 class="text-light">09:00 am - 07:00 pm</h6>
+                    <h6 class="text-light">Always Open 24/7</h6>
                     <p class="mb-1">Saturday</p>
-                    <h6 class="text-light">09:00 am - 12:00 pm</h6>
+                    <h6 class="text-light">Always Open 24/7</h6>
                     <p class="mb-1">Sunday</p>
-                    <h6 class="text-light">Closed</h6>
+                    <h6 class="text-light">Always Open 24/7</h6>
                 </div>
             </div>
         </div>
