--- a/service.html
+++ b/service.html
@@ -41,7 +41,7 @@
 
 
     <!-- Topbar Start -->
-    <div class="container-fluid bg-primary text-white d-none d-lg-flex">
+    <div class="container-fluid bg-red text-white d-none d-lg-flex">
             <div class="container py-3">
                 <div class="d-flex align-items-center">
                     <!-- <a href="index.html">
@@ -49,7 +49,7 @@
                             <p style="color: white; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">RAPID<span style="color: red; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>FRIDGE</strong></span><span style="color: black; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>REPAIRS</strong></span><br></p>
                     </a>-->
                     <div class="ms-auto d-flex align-items-center menu-link">
-                        <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>2 Kwartel Street Brackenfell Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
+                        <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>9 Rhodesia Street, WoodStock, Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
                         <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
                         <a href="" style="color: white"><small class="menu-link"><i class="fa fa-phone-alt me-3"></i>+27614027786</small></a>
                     </div>
@@ -286,61 +286,61 @@
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">RapidFridgeRepair</h4>
-                    <p>Fridge Repair is a trusted and reliable provider of professional appliance repair and re-gassing services.</p>
-                    <a href="tel:+27614027786" class="d-inline-flex align-items-center rounded overflow-hidden border border-primary bg-primary text-white" style="width: 250px; height: 55px;">
-                        <span class="btn-lg-square bg-primary" style="width: 55px; height: 55px;">
-                            <i class="fa fa-phone-alt text-white"></i>
-                        </span>
-                        Book An Appointment
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>2 Kwartel Street Brackenfell Cape Town</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+27614027786</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za</p>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="about.html">About Us</a>
-                    <a class="btn btn-link" href="contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="service.html">Our Services</a>
-                    <a class="btn btn-link" href="terms-condition.html">Terms & Condition</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Business Hours</h4>
-                    <p class="mb-1">Monday - Friday</p>
-                    <h6 class="text-light">09:00 am - 07:00 pm</h6>
-                    <p class="mb-1">Saturday</p>
-                    <h6 class="text-light">09:00 am - 12:00 pm</h6>
-                    <p class="mb-1">Sunday</p>
-                    <h6 class="text-light">Closed</h6>
+            <div class="container py-5">
+                <div class="row g-5">
+                    <div class="col-lg-3 col-md-6">
+                            <h4 style="color: blue; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">RAPID<span style="color: red; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>FRIDGE</strong></span><span style="color: white; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>REPAIRS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong></span><br></h4>
+                        <p>Fridge Repair is a trusted and reliable provider of professional appliance repair and re-gassing services.</p>
+                        <a href="tel:+27614027786" class="d-inline-flex align-items-center rounded overflow-hidden border border-primary bg-primary text-white" style="width: 250px; height: 55px;">
+                            <span class="btn-lg-square bg-primary" style="width: 55px; height: 55px;">
+                                <i class="fa fa-phone-alt text-white"></i>
+                            </span>
+                            Book An Appointment
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <h4 class="text-white mb-4">Our Office</h4>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>9 Rhodesia Street, WoodStock, Cape Town</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+27614027786</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za</p>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <h4 class="text-white mb-4">Quick Links</h4>
+                        <a class="btn btn-link" href="about.html">About Us</a>
+                        <a class="btn btn-link" href="contact.html">Contact Us</a>
+                        <a class="btn btn-link" href="service.html">Our Services</a>
+                        <!-- <a class="btn btn-link" href="terms-condition.html">Terms & Condition</a> -->
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <h4 class="text-white mb-4">Business Hours</h4>
+                        <p class="mb-1">Monday - Friday</p>
+                        <h6 class="text-light">Always Open 24/7</h6>
+                        <p class="mb-1">Saturday</p>
+                        <h6 class="text-light">Always Open 24/7</h6>
+                        <p class="mb-1">Sunday</p>
+                        <h6 class="text-light">Always Open 24/7</h6>
+                    </div>
                 </div>
             </div>
-        </div>
-        <p class="text-center">Follow us on:</p>
-        <hr>
-        <div class="d-flex justify-content-center align-items-center">
-            <div class="d-flex align-items-md-center">
-                <a class="btn btn-square btn-light rounded-circle social-icon" href=""><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-youtube"></i></a>
-                <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-linkedin-in"></i></a>
+            <p class="text-center">Follow us on:</p>
+            <hr>
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="d-flex align-items-md-center">
+                    <a class="btn btn-square btn-light rounded-circle social-icon" href=""><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-linkedin-in"></i></a>
+                </div>
             </div>
+            <!-- Whatsapp Start -->
+            <div class="d-flex justify-content-end">
+                <a  class="whats-app" href="https://wa.me/+27614027786 " target="_blank">
+                    <i class="fab fa-whatsapp" style="font-size:36px" data-toggle="tooltip" data-placement="top" title="Let's Chat"></i>
+                </a>
+            </div>
+            <!-- Whatsapp end -->
         </div>
-        <!-- Whatsapp Start -->
-        <div class="d-flex justify-content-end">
-            <a  class="whats-app" href="https://wa.me/+27614027786 " target="_blank">
-                <i class="fab fa-whatsapp" style="font-size:36px" data-toggle="tooltip" data-placement="top" title="Let's Chat"></i>
-            </a>
-        </div>
-        <!-- Whatsapp end -->
-    </div>
-    <!-- Footer End -->
+        <!-- Footer End -->
 
 
     <!-- Copyright Start -->
