--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
                     </div>
                 <div class="row g-5">
                     <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-                        <h3 class="mb-4">Need more Information?</h3>
+                        <h3 class="mb-4" style="color: red">Need more Information?</h3>
                         <p class="mb-4"><strong>Please fill in the form and one of our specialist will be in touch with you.</strong></a>.</p>
                         <form action="https://api.staticforms.xyz/submit" method="post" target="_blank">
                             <!-- Replace with accesKey sent to your email -->
@@ -172,7 +172,7 @@
                             <input type="hidden" name="replyTo" value="@"> <!-- Optional -->
                             <!-- If you want form to redirect to a specific url after submission -->
                             <input type="hidden" name="redirectTo" value="https://rapidfridgerepairs.com/success">
-                            <input type="submit" value="Submit" style="width: 200px; height: 70px"/>
+                            <input type="submit" value="Submit" class="btn-primary menu-item" style="width: 200px; height: 70px"/>
                         </form>
                     </div>
                 </div>
@@ -256,7 +256,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    Copyright &copy; <a class="fw-medium text-light" href="index.html">RAPID FRIDGE REPAIRS</a>,  <span id="displayYear">2024</span> All Rights Reserved.
+                    Copyright &copy; <a class="fw-medium text-light" href="index.html">rapidfridgerepairs.com</a>,  <span id="displayYear">2024</span> All Rights Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
