--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
                                             <h5 class="mb-3">EMAIL US ON</h4>
                                             <p class="mb-0">
                 
-                                                    info@rapidfridgerepair.co.za 
+                                                    info@rapidfridgerepairs.com 
                                             </p>
                                         </div>
                                     </div>
@@ -161,11 +161,11 @@
                         <form action="https://api.staticforms.xyz/submit" method="post" target="_blank">
                             <!-- Replace with accesKey sent to your email -->
                             <input type="hidden" name="accessKey" value="34b20ec5-8d96-462a-b27b-2a07c436fcd5"> <!-- Required -->
-                            <input type="text" class="form-control" name="name" placeholder="Enter Your Name" style="width: 400px" required><br>
-                            <input type="text" class="form-control" name="subject" placeholder="Subject" style="width: 400px" required><br>
-                            <input type="text" class="form-control" name="email" placeholder="Your Email" style="width: 400px" required><br>
-                            <input type="text" class="form-control" name="phone" placeholder="Your phone number" style="width: 400px" required ><br>
-                            <textarea class="form-control" name="message" placeholder="Your Message" style="height: 200px" required></textarea><br>
+                            <input type="text" class="form-control" name="name" placeholder="Enter Your Fullname" style="width: 400px" required><br>
+                            <input type="text" class="form-control" name="subject" placeholder="Enter Subject" style="width: 400px" required><br>
+                            <input type="text" class="form-control" name="email" placeholder="Enter Your Email" style="width: 400px" required><br>
+                            <input type="text" class="form-control" name="phone" placeholder="Enter Your phone number" style="width: 400px" required ><br>
+                            <textarea class="form-control" name="message" placeholder="Enter Your Message" style="height: 200px" required></textarea><br>
                             <!-- If you want replyTo to be set to specific email -->
                             <input type="hidden" name="replyTo" value=""> <!-- Optional -->
                             <!-- Specify @ as reply to value if you want it to be customers email -->
@@ -210,7 +210,7 @@
                         <h4 class="text-white mb-4">Our Office</h4>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>9 Rhodesia Street, WoodStock, Cape Town</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+27614027786</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@rapidfridgerepair.co.za</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@rapidfridgerepairs.com</p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h4 class="text-white mb-4">Quick Links</h4>
