--- a/service.html
+++ b/service.html
@@ -302,7 +302,7 @@
                         <h4 class="text-white mb-4">Our Office</h4>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>9 Rhodesia Street, WoodStock, Cape Town</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+27614027786</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@rapidfridgerepair.co.za</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@rapidfridgerepairs.com</p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h4 class="text-white mb-4">Quick Links</h4>
